--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build-storybook": "storybook build",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "src/**/*.{js,ts,jsx,tsx}": "npm test --"
+  },
   "dependencies": {
     "next": "14.2.5",
     "react": "^18",
@@ -46,6 +49,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-styled-components": "^7.2.0",
+    "lint-staged": "^15.2.8",
     "plop": "^4.0.1",
     "storybook": "^8.2.8",
     "typescript": "^5"
